Changelog
=========


1.0.5 (unreleased)
------------------

- Ungrock the package.
  [mathias.leimgruber]

- Fix test setup for plone 4.3 and intid.
  [mathias.leimgruber]

- Add plone 4.3.x tests cfg and development.cfg.
  [mathias.leimgruber]


1.0.4 (2012-09-12)
------------------

- Set default values on all fields in the inbound mail creation.
  Issue #222 Metadaten Standort und Sprache
  https://extranet.4teamwork.ch/support/ph-vs/tracker/222/
  [philippegross]


1.0.3 (2012-06-18)
------------------

- Fixed BeautifulSoup related encoding bug when unwrapping html body.
  [lgraf]

- Fix filename encoding handling.
  [jone]


1.0.2 (2012-03-28)
------------------

- Inbound mail: Get recipient from env variable set by MTA, not from To header.
  This allows for mails with multiple recipients in the To header, and the
  Plone destination address doesn't need to be listed first anymore.
  Issue #1312 Fehler E-Mail mit mehreren Adressaten
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1312/
  [lgraf]

- Make intids work in tests (register IIntIds utility explicitely)
  [lgraf]


1.0.1 (2012-02-24)
------------------

- Added some French translations
  [ttschanz]

1.0 (2011-11-17)
----------------

- Fixed msg getter, it works now also with mails without a subject.
  [phgross]


1.0a11 (2011-10-04)
-------------------

- Fixing long subject headers separated by \n\t before creating email.message
  object.
  [lgraf]

- Added test to test mail creation with weird characters in subject.
  [lgraf]

- Normalizing subject before using it as an ID to create a mail object.
  [lgraf]

- Changed default encoding to 'utf-8' for the safe_utf8 method.
  Should fix decoding problem in mail subjects.
  Issue #1209 Falsche Umlaute bei importierten Mails
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1209
  [phgross]

1.0a10 (2011-09-27)
-------------------
